# fivebar

./: .gitignore  LICENSE  README.md  index.html  llms.txt  pyproject.toml
configs/: default.toml
src/fivebar/: __init__.py  config.py  search_config.py  search_torque_config.py  simulator.py  singularity_plotter.py  spatial_reachability.py  spatial_simulator.py
web/: README.md  app.js  index.html  singularity.html  singularity.js  styles.css
