[project]
name = "fivebar"
version = "0.1.0"
description = "Five-bar linkage simulation and singularity exploration tools."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
]

[project.scripts]
fivebar-simulator = "fivebar.simulator:main"
fivebar-plot-singularities = "fivebar.singularity_plotter:main"
fivebar-plot-spatial-reachability = "fivebar.spatial_reachability:main"
fivebar-search-config = "fivebar.search_config:main"
fivebar-search-torque-config = "fivebar.search_torque_config:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
